<resources>
    <string name="app_name">Device</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="product">Product:</string>
    <string name="model">Model:</string>
    <string name="device">Device:</string>
    <string name="board">Board:</string>
    <string name="bootloader">Bootloader:</string>
    <string name="brand">Brand:</string>
    <string name="hardware">Hardware:</string>
    <string name="serial">Serial:</string>
    <string name="base_os">Base OS:</string>
    <string name="release">Release:</string>
    <string name="sdk_int">SDK INT:</string>
    <string name="error_message">Unable to find the information</string>
    <string name="status">Status : %s</string>
    <string name="plugged">Plugged : %s</string>
    <string name="percentage">Percentage : %s</string>
    <string name="charging">Charging</string>
    <string name="full">Full</string>
    <string name="unknown">Unknown</string>
    <string name="discharging">Discharging</string>
    <string name="usb">USB</string>
    <string name="ac">AC</string>
    <string name="wireless">Wireless</string>
    <string name="no">No</string>
</resources>
